# ceng543--takehome

./: .gitignore  README.md
mt_q1/: README.md  config.yaml  evaluate.py  full_evaluation.py  requirements.txt  setup.py  train.py  visualize.py  visualize_embeddings.py
mt_q1/experiments/: comparison_report.md  full_results.json
mt_q1/models/: __init__.py  bert_classifier.py  gru_model.py  lstm_model.py
mt_q1/utils/: __init__.py  data_loader.py  download_data.py  download_glove.py  embedding_loader.py  preprocessing.py
mt_q2/: README.md  analyze_attention.py  config.yaml  evaluate.py  generate_report.py  requirements.txt  train.py  visualize_attention.py
mt_q2/experiments/: FINAL_REPORT.md  attention_comparison.json  model_comparison.json
mt_q2/models/: __init__.py  attention.py  decoder.py  encoder.py  seq2seq.py
mt_q2/utils/: data_loader.py  download_data.py  (+1 more)
mt_q3/: README.md  ablation.py  config.yaml  config_bert_quick.yaml  evaluate.py  train.py
mt_q4/: .gitignore  README.md  STEP_BY_STEP_GUIDE.md  debug_data.py  debug_dataset.py  pyproject.toml  requirements.txt
mt_q4/experiments/: README.md
mt_q4/scripts/: analyze_results.py  check_requirements.py  compare_retrievers.py  download_data.py  generate_analysis_report.py  run_all_experiments.py  run_gpu_experiment.py  run_large_experiment.py  run_max_gpu.py  run_optimized.py
mt_q4/src/: data.py  evaluate.py  generator.py  retrievers.py  run_experiments.py
mt_q5/: .gitignore  README.md  __init__.py  config.yaml  environment.yml  generate_report.py  quick_example.py  run_analysis.py  verify_setup.py
(+64 files in other folders)
