[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ceng543-mt-q4"
version = "0.1.0"
description = "RAG experiments for ceng543 mt_q4 (HotpotQA, BM25 retriever + T5-small generator)"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "ceng543" }]
dependencies = [
  "datasets>=2.14.0",
  "transformers>=4.38.0",
  "rank-bm25>=0.2.2",
  "rouge-score>=0.1.2",
  "bert-score>=0.3.13",
  "nltk>=3.8.0",
  "numpy>=1.24.0",
  "torch>=2.1.0",
  "tqdm>=4.66.0",
]

[tool.setuptools.packages.find]
where = ["src"]
